@@ -1,3 +1,15 @@
+2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * src/jacl/tcl/lang/ExecCmd.java (cmdProc):
+        Reimplement JDK 1.3 and newer exec so that two
+        threads are created. One reads stdout of the
+        subprocess while the other reads stderr. This
+        is needed to avoid deadlocking in waitFor()
+        when a process writes a lot of stdout and stderr.
+        * src/tests/tcljava/tests/exec/ExecLotsOutput.java:
+        * tests/inprogress/ExecCmd.test: Add test case
+        for the waitFor() exec deadlocking bug.
+
 2005-08-08  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	Add tcljava-132-branch branch and
